Updated and fixed sequelize-ts connection

--- a/serverless.yml
+++ b/serverless.yml
@@ -27,6 +27,7 @@ provider:
 
 plugins:
   - serverless-esbuild
+  - serverless-plugin-typescript
   - serverless-offline-ssm
   - serverless-offline
 
