--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,8 +7,10 @@
     "noUnusedParameters": true,
     "removeComments": true,
     "sourceMap": true,
-    "target": "ES2020",
-    "outDir": "lib"
+    "outDir": "lib",
+    "target": "es6", // or a more recent ecmascript version
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true
   },
   "include": ["src/**/*.ts", "serverless.ts"],
   "exclude": [
