--- a/package.json
+++ b/package.json
@@ -29,10 +29,8 @@
     "serverless-esbuild": "^1.23.3",
     "serverless-offline": "^12.0.4",
     "serverless-offline-ssm": "^6.2.0",
-    "serverless-plugin-typescript": "^2.1.4",
     "ts-node": "^10.4.0",
-    "tsconfig-paths": "^3.9.0",
-    "typescript": "^4.9.5"
+    "tsconfig-paths": "^3.9.0"
   },
   "author": "The serverless webpack authors (https://github.com/elastic-coders/serverless-webpack)",
   "license": "MIT"
