Added body http helper

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@middy/core": "^3.4.0",
     "@middy/http-json-body-parser": "^3.4.0",
     "mysql2": "^3.2.4",
+    "node-input-validator": "^4.5.1",
     "pg-hstore": "^2.3.4",
     "reflect-metadata": "^0.1.13",
     "sequelize": "^6.31.0",
