Updated architecture and files directories

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@middy/core": "^3.4.0",
     "@middy/http-json-body-parser": "^3.4.0",
+    "class-validator": "^0.14.0",
     "mysql2": "^3.2.4",
     "node-input-validator": "^4.5.1",
     "pg-hstore": "^2.3.4",
