--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "mysql2": "^3.2.4",
     "node-input-validator": "^4.5.1",
     "pg-hstore": "^2.3.4",
+    "prettier": "^2.8.8",
     "reflect-metadata": "^0.1.13",
     "sequelize": "^6.31.0",
     "sequelize-typescript": "^2.1.5"
