--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "node": ">=14.15.0"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.332.0",
     "@middy/core": "^3.4.0",
     "@middy/http-json-body-parser": "^3.4.0",
     "class-validator": "^0.14.0",
@@ -32,6 +33,7 @@
     "serverless-esbuild": "^1.23.3",
     "serverless-offline": "^12.0.4",
     "serverless-offline-ssm": "^6.2.0",
+    "serverless-s3-local": "^0.7.2",
     "ts-node": "^10.4.0",
     "tsconfig-paths": "^3.9.0"
   },
