--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "prettier": "^2.8.8",
     "reflect-metadata": "^0.1.13",
     "sequelize": "^6.31.0",
-    "sequelize-typescript": "^2.1.5"
+    "sequelize-typescript": "^2.1.5",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@serverless/typescript": "^3.0.0",
