Added axios and invoke lambda

--- a/serverless.yml
+++ b/serverless.yml
@@ -69,6 +69,7 @@ functions:
   #PRODUCT_SPECIFICATION
   addProductSpecification:
     handler: src/controllers/productSpecification/addProductSpecification.handler
+    name: addProductSpecification
     description: Function to store an product specification object inside the database for have a reference to s3 bucket
     events:
       - http:
