--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@aws-sdk/client-s3": "^3.332.0",
     "@middy/core": "^3.4.0",
     "@middy/http-json-body-parser": "^3.4.0",
+    "axios": "^1.4.0",
     "class-validator": "^0.14.0",
     "mysql2": "^3.2.4",
     "node-input-validator": "^4.5.1",
