--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "Serverless aws-nodejs-typescript template",
   "main": "serverless.ts",
   "scripts": {
+    "check": "remark . --quiet --frail",
+    "format": "remark . --quiet --frail --output",
     "serverless-offline": "sls offline start",
     "start": "npm run serverless-offline"
   },
@@ -32,6 +34,12 @@
     "esbuild": "^0.14.11",
     "json-schema-to-ts": "^1.5.0",
     "prettier": "^2.8.8",
+    "remark-cli": "^11.0.0",
+    "remark-lint-emphasis-marker": "^3.1.2",
+    "remark-lint-list-item-indent": "^3.1.2",
+    "remark-lint-strong-marker": "^3.1.2",
+    "remark-preset-lint-consistent": "^5.1.2",
+    "remark-preset-lint-recommended": "^6.1.3",
     "serverless": "^3.0.0",
     "serverless-esbuild": "^1.23.3",
     "serverless-offline": "^12.0.4",
@@ -41,5 +49,27 @@
     "tsconfig-paths": "^3.9.0"
   },
   "author": "The serverless webpack authors (https://github.com/elastic-coders/serverless-webpack)",
-  "license": "MIT"
+  "license": "MIT",
+  "remarkConfig": {
+    "settings": {
+      "emphasis": "*",
+      "strong": "*"
+    },
+    "plugins": [
+      "remark-preset-lint-consistent",
+      "remark-preset-lint-recommended",
+      [
+        "remark-lint-list-item-indent",
+        "tab-size"
+      ],
+      [
+        "remark-lint-emphasis-marker",
+        "*"
+      ],
+      [
+        "remark-lint-strong-marker",
+        "*"
+      ]
+    ]
+  }
 }
