--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "remark-lint-emphasis-marker": "^3.1.2",
     "remark-lint-list-item-indent": "^3.1.2",
     "remark-lint-strong-marker": "^3.1.2",
+    "remark-lint-table-cell-padding": "^4.1.3",
     "remark-preset-lint-consistent": "^5.1.2",
     "remark-preset-lint-recommended": "^6.1.3",
     "serverless": "^3.0.0",
@@ -58,6 +59,7 @@
     "plugins": [
       "remark-preset-lint-consistent",
       "remark-preset-lint-recommended",
+      "remark-lint-table-cell-padding",
       [
         "remark-lint-list-item-indent",
         "tab-size"
